[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version="1.0.85", features=["unbounded_depth"] }
serde_stacker = "0.1.6"
anyhow = "1.0.66"